[package]
name = "homunculus"
version = "0.0.1"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
tokio = { version = "1.32", features = ["rt", "rt-multi-thread", "net", "macros", "io-util", "fs"] }
reqwest = "0.12.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "homunculus"
path = "main.rs"
